@@ -106,14 +106,14 @@ revolver.error.ade <- function(graph, kernel, cats) {
         PACKAGE="igraph")
 }
 
-revolver.e <- function(graph, cats, niter=5,
+revolver.e <- function(graph, cats, niter=5, st=FALSE,
                       sd=FALSE, norm=FALSE, cites=FALSE, expected=FALSE,
                       error=TRUE, debug=numeric(), verbose=igraph.par("verbose")) {
   if (!is.igraph(graph)) {
     stop("Not a graph object!")
   }
 
-  .Call("R_igraph_revolver_e", graph, as.numeric(cats), as.numeric(niter),
+  .Call("R_igraph_revolver_e", graph, as.numeric(cats), as.numeric(niter), as.logical(st),
         as.logical(sd), as.logical(norm), as.logical(cites), as.logical(expected),
         as.logical(error), as.numeric(debug), as.logical(verbose),
         PACKAGE="igraph")
