@@ -6486,13 +6486,14 @@ SEXP R_igraph_revolver_error2_ade(SEXP graph, SEXP pkernel, SEXP pcats) {
   return result;
 }   
   
-SEXP R_igraph_revolver_e(SEXP graph, SEXP pcats, SEXP pniter, 
+SEXP R_igraph_revolver_e(SEXP graph, SEXP pcats, SEXP pniter, SEXP pst,
 			SEXP psd, SEXP pnorm, SEXP pcites, SEXP pexpected,
 			SEXP perror, SEXP pdebug, SEXP verbose) {
   igraph_t g;
   igraph_vector_t cats;
   igraph_vector_t kernel;
   igraph_integer_t niter=REAL(pniter)[0];
+  igraph_vector_t vst, *ppst=0;
   igraph_vector_t vsd, *ppsd=0, vnorm, *ppnorm=0, vcites, *ppcites=0,
     vexpected, *ppexpected=0;
   igraph_vector_t debug, *ppdebug=0;
@@ -6505,6 +6506,7 @@ SEXP R_igraph_revolver_e(SEXP graph, SEXP pcats, SEXP pniter,
   R_SEXP_to_igraph(graph, &g);
   R_SEXP_to_vector(pcats, &cats);
   igraph_vector_init(&kernel, 0);
+  if (LOGICAL(pst)[0]) { igraph_vector_init(&vst, 0); ppst=&vst; }
   if (LOGICAL(psd)[0]) { igraph_vector_init(&vsd, 0); ppsd=&vsd; }
   if (LOGICAL(pnorm)[0]) { igraph_vector_init(&vnorm, 0); ppnorm=&vnorm; }
   if (LOGICAL(pcites)[0]) { igraph_vector_init(&vcites, 0); ppcites=&vcites; }
@@ -6518,41 +6520,44 @@ SEXP R_igraph_revolver_e(SEXP graph, SEXP pcats, SEXP pniter,
     igraph_vector_ptr_init(&debugres, 0); ppdebugres=&debugres;
   }
   
-  igraph_revolver_e(&g, niter, &cats, &kernel, ppsd, ppnorm, ppcites, ppexpected,
+  igraph_revolver_e(&g, niter, &cats, &kernel, ppst, ppsd, ppnorm, ppcites, ppexpected,
 		   pplogprob, pplognull, pplogmax, ppdebug, ppdebugres);
   
-  PROTECT(result=NEW_LIST(7));
+  PROTECT(result=NEW_LIST(8));
   SET_VECTOR_ELT(result, 0, R_igraph_vector_to_SEXP(&kernel));
   igraph_vector_destroy(&kernel);
-  SET_VECTOR_ELT(result, 1, R_igraph_0orvector_to_SEXP(ppsd));
+  SET_VECTOR_ELT(result, 1, R_igraph_0orvector_to_SEXP(ppst));
+  if (ppst) { igraph_vector_destroy(ppst); }
+  SET_VECTOR_ELT(result, 2, R_igraph_0orvector_to_SEXP(ppsd));
   if (ppsd) { igraph_vector_destroy(ppsd); }
-  SET_VECTOR_ELT(result, 2, R_igraph_0orvector_to_SEXP(ppnorm));
+  SET_VECTOR_ELT(result, 3, R_igraph_0orvector_to_SEXP(ppnorm));
   if (ppnorm) { igraph_vector_destroy(ppnorm); }
-  SET_VECTOR_ELT(result, 3, R_igraph_0orvector_to_SEXP(ppcites));
+  SET_VECTOR_ELT(result, 4, R_igraph_0orvector_to_SEXP(ppcites));
   if (ppcites) { igraph_vector_destroy(ppcites); }
-  SET_VECTOR_ELT(result, 4, R_igraph_0orvector_to_SEXP(ppexpected));
+  SET_VECTOR_ELT(result, 5, R_igraph_0orvector_to_SEXP(ppexpected));
   if (ppexpected) { igraph_vector_destroy(ppexpected); }
   if (!isNull(pdebug) && GET_LENGTH(pdebug) != 0) {
     /* TODO */
   } else {
-    SET_VECTOR_ELT(result, 5, R_NilValue);
+    SET_VECTOR_ELT(result, 6, R_NilValue);
   }
   if (pplogprob) {
-    SET_VECTOR_ELT(result, 6, NEW_NUMERIC(3));
-    REAL(VECTOR_ELT(result, 6))[0]=*pplogprob;
-    REAL(VECTOR_ELT(result, 6))[1]=*pplognull;
-    REAL(VECTOR_ELT(result, 6))[2]=*pplogmax;
+    SET_VECTOR_ELT(result, 7, NEW_NUMERIC(3));
+    REAL(VECTOR_ELT(result, 7))[0]=*pplogprob;
+    REAL(VECTOR_ELT(result, 7))[1]=*pplognull;
+    REAL(VECTOR_ELT(result, 7))[2]=*pplogmax;
   } else {
     SET_VECTOR_ELT(result, 6, R_NilValue);
   }
-  PROTECT(names=NEW_CHARACTER(7));
+  PROTECT(names=NEW_CHARACTER(8));
   SET_STRING_ELT(names, 0, CREATE_STRING_VECTOR("kernel"));
-  SET_STRING_ELT(names, 1, CREATE_STRING_VECTOR("sd"));
-  SET_STRING_ELT(names, 2, CREATE_STRING_VECTOR("norm"));
-  SET_STRING_ELT(names, 3, CREATE_STRING_VECTOR("cites"));
-  SET_STRING_ELT(names, 4, CREATE_STRING_VECTOR("expected"));
-  SET_STRING_ELT(names, 5, CREATE_STRING_VECTOR("debug"));
-  SET_STRING_ELT(names, 6, CREATE_STRING_VECTOR("error"));
+  SET_STRING_ELT(names, 1, CREATE_STRING_VECTOR("st"));
+  SET_STRING_ELT(names, 2, CREATE_STRING_VECTOR("sd"));
+  SET_STRING_ELT(names, 3, CREATE_STRING_VECTOR("norm"));
+  SET_STRING_ELT(names, 4, CREATE_STRING_VECTOR("cites"));
+  SET_STRING_ELT(names, 5, CREATE_STRING_VECTOR("expected"));
+  SET_STRING_ELT(names, 6, CREATE_STRING_VECTOR("debug"));
+  SET_STRING_ELT(names, 7, CREATE_STRING_VECTOR("error"));
   SET_NAMES(result, names);
   
   R_igraph_after2(verbose);  
